feat(api): support localized random image character filters
